--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: BrikMentionの広場
 name: BrikMentionの広場
+author: BrikMention
 url: https://BrikMention.github.io
 img_dir: /assets/img
 logo: /assets/img/logo.jpg
